--- a/index.html
+++ b/index.html
@@ -8,14 +8,43 @@
 </head>
 <body>
     <script>
-        let x = Math.floor(Math.random() * 3);
-        if (x === 0) {
-            console.log("Rock");  
-        } else if (x === 1) { 
-            console.log("Paper");
+
+
+        let playerInput = prompt("Type Rock, Paper or Scissors");
+        pm = playerInput;
+        pm = pm.toLocaleLowerCase();
+
+        if (pm === "rock") {
+            console.log(1);
+        } else if (pm === "paper") {
+            console.log(2);
+        } else if (pm === "scissors") {
+            console.log(3);
         } else {
-            console.log("Scissors");
+            console.log("Please type only Rock, Paper or Scissors")
         }
+
+
+        function getComputerChoice() {
+        let ComputerInput = Math.floor(Math.random() * 3);
+        if (ComputerInput === 0) {
+            return("rock");  
+        } else if (ComputerInput === 1) { 
+            return("paper");
+        } else {
+            return("scissors");
+        }}
+
+        function getPlayerChoice() {
+            let playerInput = prompt("Type Rock, Paper or Scissors");
+            playerInput = playerInput.toLocaleLowerCase();
+            return("playerInput");
+        }
+
+        getComputerChoice();
+        getPlayerChoice();
+
+
     </script>
 </body>
 </html>
