--- a/index.html
+++ b/index.html
@@ -9,31 +9,56 @@
 <body>
     <script>
 
+        function getComputerChoice() {
+        let randomNumber = Math.floor(Math.random() * 3);
+        if (randomNumber === 0) {
+        computerChoice = "rock"
+        }
+        if (randomNumber === 1) {
+        computerChoice = "paper"
+        }
+        if (randomNumber === 2) {
+        computerChoice = "scissors"
+        }
+        console.log("Computer selects: " + computerChoice);
+        return computerChoice;
+        }
+
         function getPlayerChoice() {
         let playerInput = prompt("Type Rock, Paper or Scissors");
-        pm = playerInput;
-        pm = pm.toLowerCase();
+        playerChoice = playerInput;
+        playerChoice = playerChoice.toLowerCase();
+        console.log("Player selects: " + playerChoice);
+        return playerChoice;
+        }
 
-        if (pm === "rock") {
-            console.log(1);
-        } else if (pm === "paper") {
-            console.log(2);
-        } else if (pm === "scissors") {
-            console.log(3);
-        } else {
-            console.log("Please type only Rock, Paper or Scissors")
-        }}
-
-
-        function getComputerChoice() {
-        let ComputerInput = Math.floor(Math.random() * 3);
-        if (ComputerInput === 0) {
-            return("rock");  
-        } else if (ComputerInput === 1) { 
-            return("paper");
-        } else {
-            return("scissors");
-        }}
+        function playRound () {
+            getPlayerChoice();
+            getComputerChoice();
+            if (playerChoice === "rock" && computerChoice === "paper") {
+                console.log("You lose against paper");
+            }
+            else if (playerChoice === "rock" && computerChoice === "scissors") {
+                console.log("You win against scissors");
+            }
+            else if (playerChoice === "paper" && computerChoice === "rock") {
+                console.log("You win against rock");
+            }
+            else if (playerChoice === "scissors" && computerChoice === "rock") {
+                console.log("You lose against rock");
+            }
+            else if (playerChoice === "scissors" && computerChoice === "paper") {
+                console.log("You win against paper");
+            }
+            else if (playerChoice === "paper" && computerChoice === "scissors") {
+                console.log("You lose against scissors");
+            }
+            else {
+                console.log("it is a tie!");
+            }
+        }   
+    
+        playRound();
     </script>
 </body>
 </html>
